src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVXProgressFence_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVXProgressFence_StringErrorContext.class */
public final class NVXProgressFence_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glCreateProgressFenceNVX()I", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("nglSignalSemaphoreui64NVX(IIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glSignalSemaphoreui64NVX(ILjava/nio/IntBuffer;Ljava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("nglWaitSemaphoreui64NVX(IIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glWaitSemaphoreui64NVX(ILjava/nio/IntBuffer;Ljava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("nglClientWaitSemaphoreui64NVX(IJJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glClientWaitSemaphoreui64NVX(Ljava/nio/IntBuffer;Ljava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glSignalSemaphoreui64NVX(I[I[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glWaitSemaphoreui64NVX(I[I[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        methods.put("glClientWaitSemaphoreui64NVX([I[J)V", "net/labymod/core/laby3d/opengl/error/generated/NVXProgressFenceErrorContext");
        return methods;
    }
}
